--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-BROWSER=none
-ESLINT=1
+PORT=3000
+BABEL_CACHE=none
+
+API_BASEPATH=/v1
+REACT_APP_DOMAIN=localhost
+REACT_APP_LOGIN_URL=https://login-dev.dev01.citconpay.com/app
