--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "compression-webpack-plugin": "^5.0.1",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
